compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__case_clause_guards__not.snap
---
source: compiler-core/src/javascript/tests/case_clause_guards.rs
expression: "pub fn main(x, y) {\n  case x {\n    _ if !y -> 0\n    _ -> 1\n  }\n}\n"
---
----- SOURCE CODE
pub fn main(x, y) {
  case x {
    _ if !y -> 0
    _ -> 1
  }
}


----- COMPILED JAVASCRIPT
export function main(x, y) {
  if (!y) {
    return 0n;
  } else {
    return 1n;
  }
}
