compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__case_clause_guards__not_eq_complex.snap
---
source: compiler-core/src/javascript/tests/case_clause_guards.rs
expression: "pub fn main(xs, y) {\n  case xs {\n    #(x) if xs != y -> x\n    _ -> 0\n  }\n}\n"
---
----- SOURCE CODE
pub fn main(xs, y) {
  case xs {
    #(x) if xs != y -> x
    _ -> 0
  }
}


----- COMPILED JAVASCRIPT
import { isEqual } from "../gleam.mjs";

export function main(xs, y) {
  if (!isEqual(xs, y)) {
    let x = xs[0];
    return x;
  } else {
    return 0n;
  }
}
